test_programs/analisys/uninit.tip
main() {
    var a,b;

    return a; // expected-error{{Use of unitialized variable Indentifier(a)}}
}
